# JIT-AOT-compilers

./: CMakeLists.txt  README.md
analisys/: dfs.cpp  dfs.h  dominator_tree.cpp  dominator_tree.h  loop.h  loop_analizer.cpp  loop_analizer.h  rpo.cpp  rpo.h
analysis/: dfs.cpp  dfs.h  dominator_tree.cpp  dominator_tree.h  loop.h  loop_analyzer.cpp  loop_analyzer.h  rpo.cpp  rpo.h
ir/: basic_block.cpp  basic_block.h  data_types.h  dump_instructions.cpp  function.h  graph.cpp  graph.h  helpers.h  inputs.cpp  inputs.h  instruction.cpp  instruction.h  instruction_type.def  instructions.cpp  instructions.h  ir_builder-inl.h  ir_builder.cpp  ir_builder.h  marker.h  opcodes.h  value.h
optimizations/: check_elimination.cpp  check_elimination.h  constant_folding.cpp  inlining.cpp  inlining.h  peepholes.cpp  peepholes.h
tests/: CMakeLists.txt  test_helper.h
tests/analisys/: CMakeLists.txt  dfs_test.cpp  dominator_test.cpp  dominator_tree_test.cpp  loop_analizer_test.cpp  rpo_test.cpp
tests/analysis/: CMakeLists.txt  dominator_tree_test.cpp  loop_analyzer_test.cpp  rpo_test.cpp
tests/ir_builder/: CMakeLists.txt  ir_builder.cpp
tests/optimizations/: CMakeLists.txt  check_elimination_test.cpp  constant_folding_test.cpp  peepholes_test.cpp
utils/: bit_utils.h  list.h  macros.h
